# TentaFlow

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPENDENCIES_AUDIT.md  DESIGN.md  LICENSE  README.md  RELEASE-F1a.md  RELEASE-F1b.md  RELEASING.md  REVIEW.md  TODOS.md  TentaFlow.sln  routing_flow_runtime_refactor_plan.md
tentaflow/: Cargo.toml  build.rs
tentaflow-cli/: Cargo.toml
tentaflow-cli/src/: main.rs
tentaflow-cli/src/commands/: addon.rs  audit.rs  camera.rs  keys.rs  mod.rs  policy.rs
tentaflow-cli/tests/: cli_addon_trust.rs  cli_addon_validate.rs  cli_policy.rs
tentaflow-client/native/: Cargo.toml  TentaFlow.Client.Native.projitems  TentaFlow.Client.Native.shproj  build.rs  cbindgen.toml
tentaflow-client/native/src/: chat_template.rs  client.rs  ffi.rs  lib.rs  types.rs
tentaflow-containers/sidecar/: Cargo.toml
tentaflow-containers/sidecar/src/: config.rs  identity.rs  lib.rs  main.rs
tentaflow-containers/sidecar/tests/: quic_lifecycle.rs
tentaflow-containers/teams-bot/: Cargo.toml  Dockerfile  build.sh  pulseaudio.conf
tentaflow-containers/teams-bot/src/: audio.rs  browser.rs  browser_inject.js  config.rs  main.rs  quic_server.rs  vad.rs
tentaflow-core/: ADDON_ARCHITECTURE.md  Cargo.toml  MESH_SECURITY.md  build.rs
tentaflow-core/.context/: codex-session-id
tentaflow-core/addon-sdk/sdk/: Cargo.toml
tentaflow-core/addon-sdk/template/: Cargo.toml  DESCRIPTION.md  SKILL.md  blocks.json  manifest.toml
tentaflow-core/addons/camera-test-addon/: Cargo.toml  manifest.toml
tentaflow-core/addons/embeddings-chunker/: Cargo.toml  SKILL.md  manifest.toml
tentaflow-core/addons/malicious-addon/: Cargo.toml  manifest.toml
tentaflow-core/addons/memory/: ARCHITECTURE.md  SKILL.md  manifest.toml
tentaflow-core/addons/sql-test-addon/: Cargo.toml  manifest.toml
tentaflow-core/addons/test-addon/: Cargo.toml  manifest.toml
tentaflow-core/addons/test-app-addon/: Cargo.toml  blocks.json  manifest.toml
tentaflow-core/assets/test/: README.md
tentaflow-core/benches/: audio_pipeline_clones.rs  manifest_perf.rs  migration_perf.rs  noop.rs  recording_perf.rs  service_call_perf.rs  sql_host_perf.rs  streaming_pickup_perf.rs
tentaflow-core/docs/: ADDON_HOST_FUNCTIONS.md  ADDON_MANIFEST.md
tentaflow-core/examples/: bootstrap_python_bundle.rs  bundle_smoke.rs  embedded_smoke.rs  kokoro_e2e.rs  mlx_whisper_e2e.rs  system_check.rs  test_bielik_mlx.rs  tts_e2e.rs
tentaflow-core/src/: audio_models.rs  firewall_check.rs  lib.rs  lifecycle_signal.rs  macos_ffi.rs  paths.rs  vision_models.rs
tentaflow-core/src/addon/: bundled.rs  errors.rs  event_bus.rs  flow_blocks.rs  fs_sandbox.rs  instance_pool.rs  lifecycle.rs  manifest.rs  migrations.rs  mod.rs  oauth.rs  oauth_cleanup.rs  oauth_crypto.rs  oauth_master_key.rs  oauth_refresh_guard.rs  permissions.rs  rate_limiter.rs  sdk_version.rs  signature.rs  storage_sql.rs  tool_dispatch.rs  ui_framework.rs  utils.rs
tentaflow-core/src/api/: frame_pickup.rs  frames.rs  mod.rs  mtls.rs  rate_limit.rs  recording.rs  tls_pem.rs  unified_server.rs
tentaflow-core/src/audit/: chain.rs  mod.rs  verify.rs
tentaflow-core/src/auth/: acl.rs  mod.rs  rate_limit.rs  sso.rs
tentaflow-core/src/config/: mod.rs
tentaflow-core/src/crypto/: mod.rs
tentaflow-core/swift/: RDMAProbe.swift
tentaflow-core/tests/: abi_error_sweep.rs  addon_integration.rs  addon_manifest_parsing.rs  addon_signature_install.rs  alias_host_functions.rs  camera_host_functions.rs  camera_integration_e2e.rs  camera_rtsp_integration.rs  camera_security.rs  credentials_rotation.rs  db_migrations_v23.rs  db_migrations_v24.rs  db_migrations_v26.rs  db_migrations_v27.rs  db_migrations_v28.rs  db_migrations_v8_v12.rs  flow_install_compile.rs  frame_pickup_cross_node.rs  install_flow_e2e.rs  macos_native_engines.rs  mesh_discovery_repro.rs  mesh_frame_proxy_dispatch.rs  mesh_key_sync_integration.rs  mesh_tie_break.rs  policy_host_function.rs  profiling_full_gui_simulation.rs  profiling_phase1_audit.rs  profiling_real_session_e2e.rs  rate_limit_tests.rs  recording_host_functions.rs  recording_http_e2e.rs  sdk_boilerplate.rs  security_audit_chain.rs  security_fs_isolation.rs  security_hardening_e2.rs  service_call_rate_limit.rs  services_e2e.rs  sql_host_functions.rs  streaming_host_functions.rs  streaming_pickup.rs  (+6 more)
tentaflow-core/www/: index.html  manifest.webmanifest  sw.js  vision-test.html
tentaflow-core/wwwroot/: index.html
tentaflow-desktop/core/: Cargo.toml
tentaflow-desktop/macos/: Cargo.toml  Info.plist  build.rs
tentaflow-desktop/windows/: Cargo.toml  build.rs
tentaflow-iroh-spike/: CRITERIA.md  Cargo.toml  DECISION.md
tentaflow-iroh-spike/src/: accept_connect.rs  epoch_rotation.rs  lib.rs  pairing.rs  replay.rs  trust_state.rs
tentaflow-iroh-spike/tests/: criterion_a_accept_connect.rs  criterion_f_throughput.rs  criterion_g_leak_soak.rs
tentaflow-macros/: Cargo.toml
tentaflow-macros/src/: lib.rs
tentaflow-mobile/core/: Cargo.toml
tentaflow-protocol/: Cargo.toml  TentaFlow.Protocol.Rust.projitems  TentaFlow.Protocol.Rust.shproj
tentaflow-protocol-wasm/: Cargo.toml
tentaflow-protocol-wasm/src/: identity.rs  lib.rs
tentaflow-protocol/benches/: noop.rs
tentaflow-protocol/fuzz/: Cargo.toml
tentaflow-protocol/src/: envelope.rs  lib.rs  mesh.rs  message_body.rs  pii.rs  profiling.rs  types.rs  vision.rs
tentaflow-transport/: Cargo.toml
tentaflow-transport/examples/: iroh_test_client.rs
tentaflow-transport/src/: client.rs  endpoint.rs  error.rs  framing.rs  lib.rs  server.rs
tentaflow-ui/: Cargo.toml
tentaflow-ui/src/: app.rs  lib.rs
tentaflow-voice/: Cargo.toml  build.rs
tentaflow-voice/.cargo/: config.toml
tentaflow-voice/benches/: silero_vad_bench.rs
tentaflow-voice/examples/: bench_wespeaker.rs  deep_inspect.rs  dump_constants.rs  dump_graph.rs  inspect_model.rs  test_diarization.rs  test_fbank.rs  test_silero.rs  test_wav.rs  test_wespeaker.rs
tentaflow-voice/src/: error.rs  fbank.rs  lib.rs  onnx_loader.rs  silero_vad.rs  wespeaker.rs
tentaflow/src/: main.rs  mlx_swift_init.rs
(+1209 files in other folders)
