[package]
name = "tentaflow-cli"
version = "0.1.0"
edition = "2021"
description = "TentaFlow narzedzie wiersza polecen (validate manifestu addonow, F1c packaging)"

[[bin]]
name = "tentaflow-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tentaflow-core = { path = "../tentaflow-core", default-features = false, features = ["dashboard-api", "camera"] }
chrono = "0.4"
rand = "0.10.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
