[package]
name = "tentaflow-core"
version = "0.1.0"
edition = "2021"
description = "TentaFlow Core — wspolna biblioteka dla Router, Desktop i Mobile"

[features]
default = ["inference-whisper"]
docker = ["dep:bollard"]
inference-llamacpp = ["dep:llama-cpp-2", "dep:encoding_rs"]
# whisper-rs i llama-cpp-2 obie linkuja wlasna kopie ggml — nie da sie ich
# laczyc razem (linker zwraca duplicate symbol: ggml_*). whisper-rs sterowane
# osobnym feature flagiem zeby `cargo build --features inference-llamacpp`
# nie probowal automatycznie wciagac whisper-rs.
inference-whisper = ["dep:whisper-rs"]
# sherpa-onnx jako embedded TTS — bindings do sherpa-onnx + onnxruntime
# z crate sherpa-rs. Niezalezny linker space (nie kolizja z ggml).
inference-sherpa = ["dep:sherpa-rs"]
# MLX inference przez Swift bridge (mlx-swift / MLXLLM). Wymagane macOS + Xcode
# — build.rs w tentaflow/ buduje libMLXBridge.dylib przez xcodebuild. Aktywne
# na desktop macOS i iOS. Stary `inference-mlx` (oparty o mlx-rs / mlx-models)
# zostal usuniety bo Rust port ma bug w 4-bit forward pass — Bielik / Qwen
# generowaly losowe tokeny.
inference-mlx = ["dep:tokenizers"]
# MLX Whisper przez Swift bridge — laduje libMLXBridge.dylib runtime'em (dlopen)
# i wola `MLXWhisper_*` z naszego portu whisper.py do mlx-swift. Aktywne tylko
# na macOS / iOS gdzie dylib istnieje.
inference-mlx-whisper = ["dep:libloading"]
# Apple AVSpeechSynthesizer TTS — natywne glosy systemowe (Zosia, Daniel,
# Samantha...). Dziala tylko na macOS/iOS. dlopen libMLXBridge.dylib.
inference-apple-tts = ["dep:libloading"]
# Kokoro 82M TTS przez mlx-swift port. macOS/iOS only.
inference-mlx-kokoro = ["dep:libloading"]
inference-diarization = ["dep:tentaflow-voice"]
dashboard-api = ["dep:axum", "dep:tower", "dep:tower-http"]
metrics-prometheus = ["dep:prometheus"]
rdma-probe = []
gpu-cuda = ["inference-llamacpp", "llama-cpp-2/cuda"]
gpu-vulkan = ["inference-llamacpp", "llama-cpp-2/vulkan"]
gpu-rocm = ["inference-llamacpp", "llama-cpp-2/rocm"]
gpu-metal = ["inference-llamacpp", "llama-cpp-2/metal"]
gpu-cuda-whisper = ["inference-whisper", "whisper-rs/cuda"]
gpu-vulkan-whisper = ["inference-whisper", "whisper-rs/vulkan"]
gpu-rocm-whisper = ["inference-whisper", "whisper-rs/hipblas"]
gpu-metal-whisper = ["inference-whisper", "whisper-rs/metal"]

[dependencies]
# Protocol (zawsze)
tentaflow-protocol = { path = "../tentaflow-protocol" }

# Proc-macro #[handler] + #[policy] + #[observed]
tentaflow-macros = { path = "../tentaflow-macros" }

# Linker-based handler registration (per-handler submit, no monolithic const array)
inventory = "0.3.24"

# Async runtime
tokio = { version = "1.52.1", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.32"
async-stream = "0.3.6"

# Networking — iroh (QUIC-based p2p z relay fallback, LAN mDNS, DHT discovery).
# Wspolny transport+framing udostepnia tentaflow-transport, uzywany takze przez
# tentaflow-client/native i tentaflow-containers/sidecar.
iroh = { version = "0.98.0", default-features = false, features = ["address-lookup-mdns", "address-lookup-pkarr-dht", "portmapper", "tls-ring"] }
iroh-relay = { version = "0.98.0", default-features = false, features = ["server", "tls-ring"] }
tentaflow-transport = { path = "../tentaflow-transport" }
rustls = { version = "0.23.38", features = ["ring"] }
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
tokio-util = "0.7.18"

# HTTP
reqwest = { version = "0.13.2", features = ["json", "stream", "rustls", "multipart", "blocking", "form"] }
hyper = { version = "1.9.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2+spec-1.1.0"
rkyv = { version = "0.8.15", features = ["unaligned"] }

# Database
rusqlite = { version = "0.39.0", features = ["bundled"] }

# Crypto
argon2 = "0.5.3"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10.3"
hkdf = "0.12"
zeroize = "1.8.2"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
chacha20poly1305 = "0.10.1"
curve25519-dalek = "4.1.3"

# WebSocket
tokio-tungstenite = "0.29.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Embedowanie kontekstu kontenerow w binarce (deploy::bundle)
flate2 = "1.1.9"
tar = "0.4.45"
tempfile = "3.27.0"
# Parsowanie compose_yaml z wizarda przy deploy bundled containers
serde_yaml = "0.9.33"

# Synchronizacja
parking_lot = "0.12.5"
dashmap = "6.1.0"
arc-swap = "1.7.1"

# Utils
uuid = { version = "1.23.1", features = ["v4"] }
lazy_static = "1.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.10.1"
rand_core = "0.10"
getrandom = "0.4"
base64 = "0.22.1"
hex = "0.4.3"
regex = "1.12.3"

# Multipart form data parsing
multer = "3.1"

# Dashboard API (optional)
axum = { version = "0.8.9", optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.8", features = ["cors", "fs"], optional = true }

# Docker (optional)
bollard = { version = "0.20.2", optional = true }

# Inference — llama.cpp (optional)
llama-cpp-2 = { version = "0.1.143", features = ["sampler"], optional = true }
encoding_rs = { version = "0.8.35", optional = true }

# Inference — MLX (optional, macOS only). Tokenizery uzywane przez wykrywanie
# chat_template w mlx_swift_bridge; samo MLX inferencje robi Swift libMLXBridge.dylib.
tokenizers = { version = "0.22.2", optional = true }

# STT — Whisper (optional)
whisper-rs = { version = "0.16.0", optional = true }
# dlopen libMLXBridge.dylib — feature inference-mlx-whisper.
libloading = { version = "0.8", optional = true }
sherpa-rs = { version = "0.6.8", optional = true }
hound = "3.5.1"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3", "ogg", "vorbis", "pcm"] }

# Speaker diarization — pure Rust forward pass przez tentaflow-voice
# Cross-platform (Linux/macOS/Windows/iOS/Android), bez ort/onnxruntime ABI hell
tentaflow-voice = { path = "../tentaflow-voice", optional = true }

# Embedded static files — generowane przez build.rs (bez include_dir!)
# MIME detection jest w build.rs

# Mesh
mdns-sd = "0.19.0"
hostname = "0.4.2"
sysinfo = "0.38.4"
num_cpus = "1"
which = "8.0.2"
# python-build-standalone dystrybuuje archiwa .tar.zst (domyslnie) — zstd dekoder
zstd = "0.13.3"
zip = "8.5.1"
rcgen = "0.14.7"

# GPU detection — cross-platform (Metal, Vulkan, DX12, GL)
wgpu = "29.0.1"

# Pobieranie modeli z HuggingFace
hf-hub = "0.5.0"

# Hub — wyszukiwanie i magazyn modeli
urlencoding = "2"
url = "2"
dirs = "6.0.0"

# Enumeracja interfejsow sieciowych (IPv4-only advertise/bind dla iroh mesh)
netdev = "0.31"

# Metrics (optional)
prometheus = { version = "0.14.0", optional = true }

# WASM runtime — wasmtime na Desktop/Router, wasmi na Mobile (iOS/Android)
# Target-specific dependencies ponizej

[target.'cfg(unix)'.dependencies]
libc = "0.2.185"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"


[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
wasmtime = "43.0.1"
wasmtime-wasi = "43.0.1"

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
wasmi = "1.0.9"

[build-dependencies]
rcgen = "0.14.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2+spec-1.1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"

[dev-dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }
wasmtime = "43.0.1"
tempfile = "3"
