[package]
name = "tentaflow-macros"
version = "0.1.0"
edition = "2021"
authors = ["TentaFlow"]
description = "Proc-macro: #[handler] + #[policy] + #[observed] dla WSS dispatch"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
