[package]
name = "tentaflow-protocol-wasm"
version = "0.1.0"
edition = "2021"
authors = ["TentaFlow"]
description = "WASM bindings dla tentaflow-protocol — browser-side rkyv codec + Envelope helpers"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core protocol types (zero-copy rkyv)
tentaflow-protocol = { path = "../tentaflow-protocol" }

# WASM bindings
wasm-bindgen = "=0.2.108"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Storage", "Window", "WebTransport", "WebTransportBidirectionalStream", "WebTransportReceiveStream", "WebTransportSendStream", "WritableStream", "WritableStreamDefaultWriter", "ReadableStream", "ReadableStreamDefaultReader"] }

# rkyv (same pinned version jak w tentaflow-protocol)
rkyv = { version = "0.8.12", features = ["unaligned"] }

# serde_json — for browser-side payload encoding into rkyv types
serde_json = "1"

# Ed25519 identity (node keypair) — generowany w browser i persistowany w localStorage
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["rand_core"] }
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
# getrandom with `js` feature — required by transitive deps (curve25519, serde)
# to build for wasm32-unknown-unknown. Without `js` getrandom has no RNG path.
getrandom = { version = "0.2", features = ["js"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# Logging w browser
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"     # size optimization (bundle size budget)
lto = true
codegen-units = 1
