[package]
name = "tentaflow-protocol"
version = "0.1.0"
edition = "2021"
authors = ["TentaFlow"]
description = "Wspólne typy protokołu QUIC+rkyv dla Router i RAG"

[dependencies]
# Zero-copy serialization
rkyv = { version = "0.8.12", features = ["unaligned"] }
bytecheck = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.0", features = ["base64"] }

[dev-dependencies]
serde_json = "1.0"
