[package]
name = "tentaflow-protocol"
# v0.2.0 (Codex M2): bump po breaking wire change w R2 (RAGPayload/IngestRequest
# delete, SchemaVersion 11→12). Patrz `envelope.rs::SCHEMA_VERSION` v12 changes.
version = "0.2.0"
edition = "2021"
authors = ["TentaFlow"]
description = "Wspólne typy protokołu QUIC+rkyv dla TentaFlow"

[dependencies]
# Zero-copy serialization
rkyv = { version = "0.8.12", features = ["unaligned"] }
bytecheck = "0.8"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "noop"
harness = false
