[package]
name = "tentaflow-transport"
version = "0.1.0"
edition = "2021"
description = "Wspolny transport iroh + rkyv uzywany przez tentaflow, tentaflow-client i sidecar"

[lib]
name = "tentaflow_transport"
path = "src/lib.rs"

[dependencies]
tentaflow-protocol = { path = "../tentaflow-protocol" }

# Transport
iroh = { version = "=0.98.0", default-features = false, features = ["address-lookup-mdns", "address-lookup-pkarr-dht", "portmapper", "tls-ring"] }

# Serialization
rkyv = { version = "0.8.12", features = ["std", "bytecheck", "unaligned"] }
bytecheck = "0.8"

# Async runtime
tokio = { version = "1", features = ["rt", "sync", "time", "macros", "io-util"] }
async-trait = "0.1"
futures = "0.3"

# Utils
thiserror = "2"
tracing = "0.1"
parking_lot = "0.12"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.7", features = ["html_reports"] }
anyhow = "1"

[[bench]]
name = "noop"
harness = false

[patch.crates-io]
ed25519-dalek = { path = "../vendor/ed25519-dalek" }
