[package]
name = "tentaflow-ui"
version = "0.1.0"
edition = "2021"
description = "TentaFlow UI — wspolna biblioteka GUI (egui + wgpu)"

[dependencies]
# GUI
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = ["wgpu", "default_fonts"] }
egui_extras = { version = "0.30", features = ["image"] }

# Serialization (do komunikacji z Core)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async (komunikacja z Core w background)
tokio = { version = "1.35", features = ["sync", "rt"] }

# Logging
tracing = "0.1"

# Utils
chrono = { version = "0.4", features = ["serde"] }
