[package]
name = "tentaflow-ui"
version = "0.1.0"
edition = "2021"
description = "TentaFlow UI — wspolna biblioteka GUI (egui + wgpu)"

[dependencies]
# GUI
egui = "0.34.2"
eframe = { version = "0.34.2", default-features = false, features = ["wgpu", "default_fonts"] }
egui_extras = { version = "0.34.2", features = ["image"] }

# Serialization (do komunikacji z Core)
serde = { version = "1.0", features = ["derive"] }

# Async (komunikacja z Core w background)
tokio = { version = "1.52.2", features = ["sync", "rt"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
